--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "CoonectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=cine_api_db;Username=sebascode;Password=valarezo2004"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
