fix(config): Corrigiendo la cadena de conexión a PostgresSQL

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "CoonectionStrings": {
+  "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=cine_api_db;Username=sebascode;Password=valarezo2004"
   },
   "Logging": {
